--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "php": ">=5.4.0",
         "yiisoft/yii2": "~2.0.14",
         "yiisoft/yii2-bootstrap": "~2.0.0",
-        "yiisoft/yii2-swiftmailer": "~2.0.0"
+        "yiisoft/yii2-swiftmailer": "~2.0.0",
+        "genxoft/yii2-oas3": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
@@ -26,8 +27,7 @@
 
         "codeception/base": "~2.3.0",
         "codeception/verify": "~0.4.0",
-        "codeception/specify": "~0.4.6",
-        "light/yii2-swagger": "*"
+        "codeception/specify": "~0.4.6"
     },
     "config": {
         "process-timeout": 1800,
